css/style.css
@import url(.fonts.css);
@import url(./partials/variables.css);
@import url(./partials/_global.css);



/*Start nav*/

/* .header_area{
    position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 999;
  background-color: white;
} */

.header_area .main-menu .navbar .navbar-brand{
    padding: 0 2rem 0 5rem;
}

.header_area .main-menu .navbar{
    padding: 1rem 0;
}

.header_area .main-menu .nav-item .nav-link{
    font-family: Helvetica, Arial, sans-serif;
    text-transform: uppercase;
    font-weight: 500;
    padding: 0.6rem;
    color: var(--title-color);
}

.header_area .main-menu .navbar-nav .active a{
    background: var(--gradient-color);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    background-clip: text;
}

.header_area .main-menu .navbar-nav a:hover{
    background: var(--gradient-color);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    background-clip: text;
}


/*End nav*/

/* banner area */
.site-main .site-banner{
    background: url(../img/banner/home-banner.png) no-repeat;
    background-position: 0%, 50%;
}


.site-main .site-banner .site-title h3{
    padding-top: 35%;
    font-weight: 500;

}

.site-main .site-banner .site-title h3:after{
    height: 2px;
    width: 18vw;
    background-color: black;
    display: inline-block;
    margin-left: 5%;
    transform: translateY(-10px);
}

.site-main .site-banner .site-title h1{
    font-size: 5rem;
}


.site-main .site-banner .site-title h4{
    font-size: 1.5rem;
}

.site-main .site-banner .banner-image > img{
    padding: 7rem 0;
    width: 90rem;
}





/* end banner area */

/* start about area */

.site-main .about-area{
    padding: 8rem 5rem;
}

.site-main .about-area .about-title h2 > span{
    display: block;
    font: normal bold 49px/60px;
    letter-spacing: 10px;
}

.site-main .about-area .about-title .paragraph > p{
    padding: .4rem 0;
}


/* end about area */

/* contact area */

.site-main .brand-area{
    padding: 1rem 12rem;
    margin-bottom: 4rem;

}

.site-main .brand-area .first-row .col-lg-4{
    display: flex;
    justify-content: center;
}

.site-main .brand-area .first-row .col-lg-4 > .single-brand{
    border: 1px solid var(--border-color);
    text-align: center;
    padding: 1.8rem 0;
    margin: .9rem 0;
    width: 180px;
    height: 100px;
    transition: transform .4s ease;

}

.site-main .brand-area .first-row .col-lg-4 > .single-brand > img{
    width: 50%;
}

.site-main .brand-area .first-row .col-lg-4 > .single-brand:hover{
    box-shadow: var(--box-shadow);
    transform: scale(1.1);
}



.site-main .brand-area .first-row .col-lg-4 > .single-brand:hover > img{
    filter: brightness(0.15);
}

.site-main .brand-area .experience-area{
    padding-left: 1rem;

}

.site-main .brand-area .experience-area span{
    display: block;
}

.site-main .brand-area .experience-area .years-area{
    background: url(../img/client-info-bg.png) no-repeat 45px 20px;
    padding: 2rem 0;
    width: 40rem;
    height: 18rem;
    padding-left: 8rem;
    position: relative;
}

.site-main .brand-area .experience-area .bg-panel{
    position: absolute;
    left: -190px; 
    top: 0%;
    background: #e029290a;
    width: 400px;
    height: 400px;
    margin-left: 340px;
    z-index: -1;
}

.site-main .brand-area .experience-area .years-area .years{
    font: normal bold 84px/40px;
    color: var(--primary-color2);
    z-index: -2;
}

.site-main .brand-area .experience-area .years-area h2 > span{
    font: normal 600 22px/30px;
}


.site-main .brand-area .experience-area .call-area{
    padding-left: 10rem;

}



/* end contact */

/* services area */
.site-main .services-area{
    padding: 7rem 2rem;

}

.site-main .services-area .services-title{
    padding: 0 14rem;

}

.site-main .services-area .services-title h1{
    font-size: 35px;
}

.site-main > .services-area .services{
    background-color: rgba(248, 252, 253, 0.973);
    padding: 2rem 0;
    height: 26rem;
    width: 16rem;
    margin: 5rem .5rem;
    transition: box-shadow .5s ease;

}

.site-main .services-area .services:hover{
    box-shadow: var(--box-shadow)
}


/* end services */


/* projects area */

.site-main .project-area{
    padding: 4rem 0;

}

.site-main .project-area .button-group button{
    background: transparent;
    border: none;
    font: normal 500 16px/130px;
    text-transform: uppercase;
    padding-bottom: 5rem;
}


.site-main .project-area .button-group button +button{
    padding-left: 3rem;

}

.site-main .project-area .grid .our-project > title h4{
    font: normal 700 25px/12px;
}


.site-main .project-area .grid .our-project .img a:hover img{
    filter: brightness(1.1) drop-shadow(1px 8px 30px #b1afaf);
}



/* end project */


/* about me */


.site-main .about-area .about-title p{
    padding: 1rem 7rem;
}

.site-main .about-area .client{
    background: #ffffff10;
    box-shadow: var(--box-shadow);
    margin: 3rem 0rem
}

.site-main .about-area .client .about-client{
    padding-top: 2rem;

}

.site-main .about-area .client .about-client h4{
    font: normal 500 21px/20px;
}

.site-main .about-area .client .about-client p{
    font-size: 14px;
}

.site-main .about-area .client .owl-carousel .owl-item{
    display: flex;
    justify-content: center;
    padding: 0 1.5rem;
}

.site-main .about-area .owl-carousel .owl-dots .owl-dot.active span{
    background-color: var(--primary-color);
    width: 12px;
    height: 12px;
}






/* end about me */




/* subscribe area */



.site-main .subscribe-us-area .subscribe{
    background: url(../img/subscribe-bg.png) no-repeat;
    padding: 10rem 0;
    margin: 3rem auto;
}


.site-main .subscribe-us-area .subscribe .subscribe-title h4{
    font: normal 700 30px/30px;
    color: whitesmoke;
}

.site-main .subscribe-us-area .subscribe .subscribe-title p{
    color: whitesmoke;
    padding: 1rem 4rem;
}


.site-main .subscribe-us-area .subscribe form .input-textbox input{
    width: 400px;
    padding: 1.5rem 1rem;
    border: 1px solid whitesmoke;
    background: transparent;
    color: white;
    font: normal 500 17px/20px var(--roboto);
}


.site-main .subscribe-us-area .subscribe form .input-textbox input::placeholder{
    color: whitesmoke;
}


.site-main .subscribe-us-area .subscribe form .btn-submit button{
    background: whitesmoke;
    color: #000;
    padding: .7rem 2rem;
}


/* end subscrobe area */


/* footer area */

footer.footer-area{
    padding: 5rem 0;
    background: url(../img/footer-bg.png) no-repeat;
}

footer.footer-area .social h5{
    font: normal 500 23px/ 30px var(--roboto);
}

footer.footer-area .social a > i{
    font-size:22px;
    padding: 2rem;
    color: var(--border-color);
}

footer.footer-area .social a:hover > i{
    color: var(--primary-color);
}

